data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1571.wast
;; 2. **Test Name: Empty Value Stack on br_if**    **Description:** Construct a `br_if` instruction that is missing the required operand on the stack. This should cause an `EmptyValueStackExpecting` error in `wizard_engine` but would produce a generic error in WASM.    **Infinite Loop Relation:** The loop might continue indefinitely if the `br_if` cannot properly evaluate the stack condition due to the missing operand.

(assert_invalid
  (module (func $empty-value-stack-on-br_if
    (block (result i32) (br_if 0))
  ))
  "type mismatch"
)